검색 WARNING 변경